@@ -1,0 +1,78 @@
+Summary: gdcm
+Name: gdcm
+Version: @GDCM_VERSION@
+Release: 1.@GDCM_DATE@
+License: BSD
+Group: Development/Libraries
+#Source: ftp://ftp.creatis.insa-lyon.fr/gdcm/gdcm/gdcm.tar.gz
+Source: ../SOURCES/gdcm.tar.gz
+BuildRoot: /var/tmp/gdcm-%{version}-root
+Prereq: /sbin/install-info
+
+%description
+write something here
+
+%changelog
+* Fri Apr 15 2005 Fabrice Bellet <Fabrice.Bellet@creatis.insa-lyon.fr> 1.0.0-1.20050415
+- rebuild a post 1.0.0 CVS version with cmake
+
+* Wed Mar 23 2005 Fabrice Bellet <Fabrice.Bellet@creatis.insa-lyon.fr> 0.4.1-4
+- rebuild for VTK cvs20040114.
+
+* Thu Nov 11 2004 Fabrice Bellet <Fabrice.Bellet@creatis.insa-lyon.fr> 0.4.1-3
+- fix vtk/Makefile.am for FC3 automake
+- rebuild for Fedora Core 3
+
+* Thu May 27 2004 Fabrice Bellet <Fabrice.Bellet@creatis.insa-lyon.fr> 0.4.1-2
+- rebuild for Fedora Core 2
+- debuginfo rebuild
+
+* Mon May  3 2004 Fabrice Bellet <Fabrice.Bellet@creatis.insa-lyon.fr>
+- fixed some python paths.
+- update to version of 2004-04-20, for use with DaVaW.
+
+* Tue Feb 24 2004 Fabrice Bellet <Fabrice.Bellet@creatis.insa-lyon.fr>
+- initial packaging.
+
+%prep
+%setup -q -n gdcm
+
+export CC='gcc'
+export CXX='g++'
+export MAKE='make %{?_smp_mflags}'
+export CFLAGS="$RPM_OPT_FLAGS"
+export CXXFLAGS="$RPM_OPT_FLAGS -Wno-deprecated"
+cmake . \
+-DCMAKE_CXX_COMPILER:FILEPATH=$CXX \
+-DCMAKE_C_COMPILER:FILEPATH=$CC \
+-DCMAKE_INSTALL_PREFIX:STRING="/usr" \
+-DGDCM_DATA_DIR:STRING="/usr/shared/gdcm" \
+-DBUILD_TESTING:BOOL=OFF \
+-DBUILD_EXAMPLES:BOOL=ON \
+-DGDCM_VTK:BOOL=ON \
+-DGDCM_WRAP_PYTHON:BOOL=ON \
+-DGDCM_DOCUMENTATION:BOOL=OFF
+
+%build
+make
+
+%install
+rm -rf $RPM_BUILD_ROOT
+make DESTDIR=$RPM_BUILD_ROOT install
+
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+%post -p /sbin/ldconfig
+
+%postun -p /sbin/ldconfig
+
+%files
+%defattr(-, root, root)
+%doc AUTHORS ChangeLog NEWS README DEVELOPPER INSTALL
+%{_prefix}/bin/*
+%{_prefix}/lib/*
+%{_prefix}/include/*
+%{_prefix}/share/gdcm/*
+
