@@ -240,8 +240,11 @@ ENDIF(GDCM_DOCUMENTATION)
 #-----------------------------------------------------------------------------
 IF(WIN32)
   OPTION(GDCM_INSTALLER "Build the install setup using InnoSetup." OFF)
-  IF(GDCM_INSTALLER)
-    SUBDIRS(Builder)
-  ENDIF(GDCM_INSTALLER)
 ENDIF(WIN32)
+IF(UNIX)
+  OPTION(GDCM_INSTALLER "Prepare the rpmBuild use." OFF)
+ENDIF(UNIX)
+IF(GDCM_INSTALLER)
+  SUBDIRS(Builder)
+ENDIF(GDCM_INSTALLER)
 
