@@ -42,5 +42,6 @@ SET(EXAMPLE_SOURCES
 FOREACH(name ${EXAMPLE_SOURCES})
   ADD_EXECUTABLE(${name} ${name}.cxx)
   TARGET_LINK_LIBRARIES(${name} gdcm)
+  INSTALL_TARGETS(/bin/ ${name})
 ENDFOREACH(name)
 
